--- a/palenville.html
+++ b/palenville.html
@@ -43,8 +43,8 @@
         <div class="container">
 
             <div class="navbar-brand">
-                <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/resized-logo-1-128x36.png" alt="Mobirise"></a>
-                <a class="text-white" href="https://mobirise.com">HUDSON GETAWAYS</a>
+                <a href="" class="navbar-logo"><img src="assets/images/resized-logo-1-128x36.png" alt="Mobirise"></a>
+                <a class="text-white" href="">HUDSON GETAWAYS</a>
             </div>
 
             <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
