--- a/aframe.html
+++ b/aframe.html
@@ -44,8 +44,8 @@
         <div class="container">
 
             <div class="navbar-brand">
-                <a href="" class="navbar-logo"><img src="assets/images/resized-logo-1-128x36.png" alt="Mobirise"></a>
-                <a class="text-white" href="">HUDSON GETAWAYS</a>
+                <a class="navbar-logo"><img src="assets/images/resized-logo-1-128x36.png" alt="Mobirise"></a>
+                <a class="text-white" >HUDSON GETAWAYS</a>
             </div>
 
             <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
