--- a/palenville.html
+++ b/palenville.html
@@ -23,22 +23,22 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-53" data-rv-view="334">
+  <section id="dropdown-menu-53" data-rv-view="297">
 
-    <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
 
         <div class="container">
 
             <div class="navbar-brand">
-                <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/resized-logo-1-128x36.png" alt="Mobirise"></a>
-                <a class="text-white" href="https://mobirise.com">HUDSON GETAWAYS</a>
+                <a href="index.html" class="navbar-logo"><img src="assets/images/resized-logo-1-128x36.png" alt="Mobirise"></a>
+                <a class="text-white" href="index.html">HUDSON GETAWAYS</a>
             </div>
 
             <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link text-primary" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">LOCATIONS</a><div class="dropdown-menu"><a class="text-primary dropdown-item" href="palenville.html">Palenville</a><a class="text-primary dropdown-item" href="page4.html" aria-expanded="false">Leeds</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">PROPERTIES</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="aframe.html">A FRAME IN PALENVILLE</a><a class="dropdown-item text-primary" href="stargazer.html">STARGAZER IN PALENVILLE</a> <a class="dropdown-item text-primary" href="venster.html">THE VENSTER</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default-outline btn-default" href="index.html#content5-3v">BOOK</a></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link text-primary" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">LOCATIONS</a><div class="dropdown-menu"><a class="text-primary dropdown-item" href="palenville.html">Palenville</a><a class="text-primary dropdown-item" href="page4.html" aria-expanded="false">Leeds</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">PROPERTIES</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="aframe.html">A FRAME@PALENVILLE</a><a class="dropdown-item text-primary" href="stargazer.html">STARGAZER @ PALENVILLE</a> <a class="dropdown-item text-primary" href="venster.html">THE VENSTER @ LEEDS</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default-outline btn-default" href="index.html#content5-3v">BOOK</a></li></ul>
 
         </div>
 
@@ -46,7 +46,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section mbr-section--relative mbr-section--short-paddings mbr-after-navbar" id="msg-box1-4e" data-rv-view="274" style="background-color: rgb(60, 60, 60);">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section mbr-section--relative mbr-section--short-paddings mbr-after-navbar" id="msg-box1-4e" data-rv-view="237" style="background-color: rgb(60, 60, 60);">
 
     
 
@@ -66,19 +66,19 @@
 
 </section>
 
-<section class="mbr-section" id="map2-3h" data-rv-view="277">
+<section class="mbr-section" id="map2-3h" data-rv-view="240">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
                 <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--no-bg mbr-figure--caption-outside-bottom">
-                    <div class="mbr-figure__map"></div>
+                    <div class="mbr-figure__map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=place_id:ChIJqVGQfkOl3YkRvegQRX34rw4" allowfullscreen=""></iframe></div>
                 </figure>
             </div>
         </div>
     </div>
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery2-3k" data-rv-view="279">
+<section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery2-3k" data-rv-view="242">
     <!-- Gallery -->
     <div class="mbr-gallery-layout-article mbr-section__container mbr-section__container--middle">
         <div>
@@ -238,7 +238,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="content1-4p" data-rv-view="330">
+<section class="mbr-section" id="content1-4p" data-rv-view="293">
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><br></p><p>Palenville, USA's original art colony, is a tiny hamlet at the start of the scenic route to Hunter mountain. It is connected to New York by a Trailways bus. Walk to Cafes, Grocery, Restaurants, Hiking Trails and Swimming holes or borrow our bikes to explore farther. If you brought a car, turn off the GPS and embark on a journey of discovery through random little country roads to rolling hills, meadows, farms and the beautiful little towns nearby. Click on the following <a href="http://bit.ly/2nY2qVw" class="text-primary" target="_blank">link to see some of the hidden gems plotted on google maps.&nbsp;</a></p></div>
@@ -246,7 +246,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="features1-3l" data-rv-view="331" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="features1-3l" data-rv-view="294" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container mbr-section__container--std-top-padding mbr-section__container--sm-bot-padding mbr-section-title container" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--center mbr-header--wysiwyg row">
