--- a/aframe.html
+++ b/aframe.html
@@ -267,7 +267,8 @@
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 93px;">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><a href="https://www.airbnb.com/rooms/25452228" class="text-primary" target="_blank">Book on airbnb</a>&nbsp;( More expensive because of airbnb's cut)</p><p>Book directly and save!</p><p><br></p></div>
-        <iframe id="booking-iframe" sandbox="allow-top-navigation allow-scripts allow-same-origin" style="width: 100%; height: 360px" frameborder="0" src="https://booking.hospitable.com/widget/external/947394"></iframe>
+        <iframe id="booking-iframe" sandbox="allow-top-navigation allow-scripts allow-same-origin" style="width: 100%; height: 360px" frameborder="0" src="https://booking.hospitable.com/widget/external/947394">
+		</iframe>
 		</div>
     </div>
     
