--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="twitter:title" content="Home">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/resized-logo-128x36.png" type="image/x-icon">
-  <meta name="description" content="Site Maker Description">
+  <meta name="description" content="Site Maker Ddsfafsescription">
   
   
   <title>Home</title>
@@ -36,7 +36,7 @@
         <div class="container">
 
             <div class="navbar-brand">
-                <a href="index.html" class="navbar-logo"><img src="assets/images/resized-logo-1-128x36.png" alt="Mobirise"></a>
+                <a href="index.html" class="navbar-logo"><img src="assets/images/logo-331x128.png" alt="Mobirise"></a>
                 <a class="text-white" href="index.html">HUDSON GETAWAYS</a>
             </div>
 
@@ -79,7 +79,7 @@
                 <li data-app-prevent-settings="" data-target="#slider-5e" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider-5e" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider-5e" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
-                <div class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--bg-adapted item dark center mbr-section--full-height active" style="background-image: url(assets/images/img-20221211-wa0011-1024x768.jpg);">
+                <div class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--bg-adapted item dark center mbr-section--full-height active" style="background-image: url(assets/images/img-20221211-wa0013-1-1024x768.jpg);">
                     <div class="mbr-box__magnet mbr-box__magnet--center-left mbr-box__magnet--sm-padding">
                     <div class="mbr-overlay" style="opacity: 0.5;"></div>                        
                         <div class=" container">
@@ -88,11 +88,11 @@
                                 <div class=" col-md-6 col-md-offset-1">  
 
                                 <div class="mbr-hero">
-                                    <h1 class="mbr-hero__text">&nbsp; &nbsp;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <br>&nbsp; &nbsp; &nbsp;<a href="venster.html" class="text-black">The Venster@Leeds</a><div><br></div></h1>
+                                    <h1 class="mbr-hero__text">The Venster@Leeds<div><br></div></h1>
 
                                     <p class="mbr-hero__subtext">A secluded tiny house on wheels fifteen minute from Hudson, NY</p>
                                 </div>
-                                <div class="mbr-buttons btn-inverse mbr-buttons--left"> <a class="mbr-buttons__btn btn btn-lg btn-default" href="venster.html">MORE</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="aframe.html#content5-3w">BOOK</a></div>
+                                <div class="mbr-buttons btn-inverse mbr-buttons--left"> <a class="mbr-buttons__btn btn btn-lg btn-default" href="venster.html">MORE</a> <a class="mbr-buttons__btn btn btn-lg btn-default" href="venster.html#content5-5q">BOOK</a></div>
                                 </div>
                             </div>
                         </div>
@@ -256,11 +256,11 @@
     
 
     <div class="mbr-section__container container">
-        <div class="mbr-header mbr-header--inline row" style="padding-top: 40.8px; padding-bottom: 40.8px;">
+        <div class="mbr-header mbr-header--inline row" style="padding-top: 40.8px; padding-bottom: 27.2px;">
             <div class="col-sm-4">
                 <h3 class="mbr-header__text">FOLLOW US</h3>
             </div>
-            <div class="mbr-social-icons mbr-social-icons--style-1 col-sm-8"> <a class="mbr-social-icons__icon socicon-bg-facebook text-primary" title="Facebook" target="_blank" href="https://www.facebook.com/Hudson-Valley-Getaways-343168886090553"><i class="socicon socicon-facebook"></i></a>   <a class="mbr-social-icons__icon socicon-bg-instagram" title="Instagram" target="_blank" href="https://instagram.com/mobirise/"><i class="socicon socicon-instagram"></i></a> <a class="mbr-social-icons__icon socicon-bg-pinterest" title="Pinterest" target="_blank" href="https://www.pinterest.com/mobirise/"><i class="socicon socicon-pinterest"></i></a>     </div>
+            <div class="mbr-social-icons mbr-social-icons--style-1 col-sm-8"> <a class="mbr-social-icons__icon socicon-bg-facebook text-primary" title="Facebook" target="_blank" href="https://www.facebook.com/Hudson-Valley-Getaways-343168886090553"><i class="socicon socicon-facebook"></i></a>   <a class="mbr-social-icons__icon socicon-bg-instagram" title="Instagram" target="_blank" href="https://instagram.com/hudson_getaways/"><i class="socicon socicon-instagram"></i></a>      </div>
         </div>
     </div>
 </section>
