--- a/venster.html
+++ b/venster.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html  >
 <head>
   <!-- Site made with Mobirise Website Builder v5.7.0, https://mobirise.com -->
@@ -41,7 +41,7 @@
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link text-primary" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">LOCATIONS</a><div class="dropdown-menu"><a class="text-primary dropdown-item" href="palenville.html">Palenville</a><a class="text-primary dropdown-item" href="page4.html" aria-expanded="false">Leeds</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">PROPERTIES</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="aframe.html">A FRAME@PALENVILLE</a><a class="dropdown-item text-primary" href="stargazer.html">STARGAZER @ PALENVILLE</a> <a class="dropdown-item text-primary" href="venster.html">THE VENSTER @ LEEDS</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default-outline btn-default" href="index.html#content5-3v">BOOK</a></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link text-primary" href="index.html">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">LOCATIONS</a><div class="dropdown-menu"><a class="text-primary dropdown-item" href="palenville.html">Palenville</a><a class="text-primary dropdown-item" href="leeds.html" aria-expanded="false">Leeds</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">PROPERTIES</a><div class="dropdown-menu"><a class="dropdown-item text-primary" href="aframe.html">A FRAME@PALENVILLE</a><a class="dropdown-item text-primary" href="stargazer.html">STARGAZER @ PALENVILLE</a> <a class="dropdown-item text-primary" href="venster.html">THE VENSTER @ LEEDS</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-default-outline btn-default" href="index.html#content5-3v">BOOK</a></li></ul>
 
         </div>
 
