--- a/stargazer.html
+++ b/stargazer.html
@@ -391,10 +391,13 @@
     </div>
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 93px;">
         <div class="row">
-            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><a href="https://www.airbnb.com/rooms/37087043" class="text-primary" target="_blank">Book on airbnb</a>&nbsp;( More expensive because of airbnb's cut)</p><p>Book directly and save!</p><p><br></p></div>
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><a href="https://www.airbnb.com/rooms/37087043" class="text-primary" target="_blank">Book on airbnb</a>&nbsp;( More expensive because of airbnb's cut)</p>
+			<p>Book directly and save!</p>
+			<p><br></p></div>
         </div>
     </div>
-    
+     <iframe id="booking-iframe" sandbox="allow-top-navigation allow-scripts allow-same-origin" style="width: 100%; height: 360px" frameborder="0" src="https://booking.hospitable.com/widget/external/947394">
+		</iframe>
 </section>
 
 <section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="social-buttons2-3z" data-rv-view="142" style="background-color: rgb(240, 240, 240);">
