--- a/aframe.html
+++ b/aframe.html
@@ -271,7 +271,8 @@
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><a href="https://www.airbnb.com/rooms/25452228" class="text-primary" target="_blank">Book on airbnb</a>&nbsp;( More expensive because of airbnb's cut)</p><p>Book directly and save!</p><p><br></p></div>
         </div>
     </div>
-    
+    <iframe id="booking-iframe" sandbox="allow-top-navigation allow-scripts allow-same-origin" style="width: 100%; height: 360px" frameborder="0" src="https://booking.hospitable.com/widget/external/947394">
+		</iframe> 
 </section>
 
 <section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="social-buttons1-5z" data-rv-view="441" style="background-color: rgb(255, 255, 255);">
