--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </div>
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
-            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><a href="https://www.airbnb.com/rooms/25452228" class="text-primary">Book A Frame @ Palenville on Airbnb</a>&nbsp; <a href="https://www.airbnb.com/rooms/37087043" class="text-primary">Book Stargazer @ Palenville on Airbnb&nbsp;</a>&nbsp;&nbsp;</p></div>
+            <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><a href="https://www.airbnb.com/rooms/25452228" class="text-primary">Book A Frame @ Palenville on Airbnb</a>&nbsp; &nbsp;<a href="https://www.airbnb.com/rooms/37087043" class="text-primary">Book Stargazer @ Palenville on Airbnb&nbsp;</a>&nbsp;&nbsp;</p></div>
         </div>
     </div>
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 31px;">
